--- a/style-G.css
+++ b/style-G.css
@@ -35,6 +35,11 @@
        margin-left: 10px;
        margin-right: 10px;
     } 
+    #create-list li a {
+       color: #5f6878;
+       font-family: arial;
+       font-size: 13px;
+    } 
     #activity-feed {
         width:86%;
         margin: auto;
