--- a/style-G.css
+++ b/style-G.css
@@ -8,6 +8,7 @@
         background-color: #F3F5F2;
         border:1px solid #DEE5EB;
         float:left;
+        padding: 25px;
     }
     #dashboard-title {
        border-left:3px solid #8DC526; 
@@ -21,7 +22,7 @@
        margin-right: 10px;
     }  
     #create {
-       color: #CED3D9;
+       color: #CFD3DB;
        font-weight: bold;
        line-height: 31px;
        height: 31px;
@@ -36,15 +37,20 @@
        margin-right: 10px;
     } 
     #create-list li a {
-       color: #5f6878;
+       color: #5f6878!important;
        font-family: arial;
        font-size: 13px;
     } 
     #activity-feed {
-        width:86%;
+        width:100%;
         margin: auto;
         background-color: #fff;        
         border:1px solid #DEE5EB;
+    }
+   
+    
+    #activity-feed fieldset {
+        border:0px!important;
     }
     #activity-feed-title {
         background-color: #FAFCFB;
@@ -62,3 +68,173 @@
     .row {
         width:100%!important;
     }
+    #login-box {
+        margin-top: 160px!important;
+        width:30%;
+        margin:auto;
+    }
+    #login-box legend {
+        color:#373737;
+        font-family: arial;
+        font-size: 26px;
+        text-align: center;
+        width: 100%
+    }  
+    #login-box h2 {
+        color:#BBBBBB;
+        font-family: arial;
+        font-size: 16px;
+        text-align: center;
+        width: 100%;
+        font-weight: normal;
+        margin-top: 18px;
+        margin-bottom: 60px;
+    }  
+    #login-box #loginobj1 {
+        background: url(img/bg_login1.gif) no-repeat scroll;
+        width: 392px;
+        height: 142px;
+    }    
+  
+input:-webkit-autofill {
+    -webkit-text-fill-color: #BBBBBB;
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+input:-moz-autofill {
+    -moz-text-fill-color: #BBBBBB;
+    -moz-box-shadow: 0 0 0px 1000px white inset;
+}
+input:-o-autofill {
+    -o-text-fill-color: #BBBBBB;
+    -o-box-shadow: 0 0 0px 1000px white inset;
+}
+input:-khtml-autofill {
+    -khtml-text-fill-color: #BBBBBB;
+    -khtml-box-shadow: 0 0 0px 1000px white inset;
+}
+
+input:focus:-webkit-autofill {
+    -webkit-text-fill-color: #BBBBBB;
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+input:focus:-moz-autofill {
+    -moz-text-fill-color: #BBBBBB;
+    -moz-box-shadow: 0 0 0px 1000px white inset;
+}
+input:focus:-o-autofill {
+    -o-text-fill-color: #BBBBBB;
+    -o-box-shadow: 0 0 0px 1000px white inset;
+}
+input:focus:-khtml-autofill {
+    -khtml-text-fill-color: #BBBBBB;
+    -khtml-box-shadow: 0 0 0px 1000px white inset;
+}
+    input {
+    background-color:transparent;
+    border: 0px solid;
+}
+input:focus {
+    outline:none;
+}
+#but1 {
+margin-top: 16px;    
+background-image: url('img/bg_login_but.gif');
+background-repeat:no-repeat;
+background-color:transparent;
+width: 392px;
+height: 54px;
+}
+
+#butdelete {
+margin-top: 16px;    
+background-image: url('img/bg_delete_button.jpg');
+background-repeat:no-repeat;
+background-color:transparent;
+width: 80px;
+height: 34px;
+}
+#butcreate {
+margin-top: 16px;    
+background-image: url('img/bg_create_button.jpg');
+background-repeat:no-repeat;
+background-color:transparent;
+width: 75px;
+height: 34px;
+}
+#butedit {
+margin-top: 16px;    
+background-image: url('img/bg_edit_button.jpg');
+background-repeat:no-repeat;
+background-color:transparent;
+width: 75px;
+height: 34px;
+}
+#butreset {
+margin-top: 16px;    
+background-image: url('img/bg_reset_button.jpg');
+background-repeat:no-repeat;
+background-color:transparent;
+width: 79px;
+height: 34px;
+}
+
+
+
+       #activity-feed legend {
+        width:20%;
+        float:left;;
+        color:#5F6878;
+        font-family: arial;
+        font-size: 14px;
+        font-weight: normal;
+    } 
+    select {
+    border: 1px solid #cccccc;
+    border-radius: 5px 5px 5px 5px;
+    height: 40px;
+    margin: 0 0 0 0px;
+    padding: 10px;
+    width: 250px!important;
+     -webkit-appearance: none!important;  /*Removes default chrome and safari style*/
+      -moz-appearance: none!important; /* Removes Default Firefox style*/
+      background: url('img/dropdown_arrow.jpg') no-repeat #F8F8F8!important;  /*Adds background-image*/
+      background-position: 230px 7px!important;  /*Position of the background-image*/
+      text-indent: 0.01px!important; /* Removes default arrow from firefox*/
+      text-overflow: "";  /*Removes default arrow from firefox*/
+}
+#adminobj18 select {
+    border: 1px solid #cccccc;
+    border-radius: 5px 5px 5px 5px;
+    height: 40px;
+    margin: 0 0 0 0px;
+    padding: 10px;
+    width: 100px;
+     -webkit-appearance: none;  /*Removes default chrome and safari style*/
+      -moz-appearance: none; /* Removes Default Firefox style*/
+      background: url('img/dropdown_arrow.jpg') no-repeat #F8F8F8;  /*Adds background-image*/
+      background-position: 85px 7px;  /*Position of the background-image*/
+      text-indent: 0.01px; /* Removes default arrow from firefox*/
+      text-overflow: "";  /*Removes default arrow from firefox*/
+}
+.delim {
+    border-bottom: 1px solid #DEE5EB!important;
+}
+
+input[type="text"]  {
+    width:250px!important;
+}
+
+#dat select {
+    border: 1px solid #cccccc;
+    border-radius: 5px 5px 5px 5px;
+    height: 40px;
+    margin: 0 0 0 0px;
+    padding: 10px;
+    width: 100px;
+     -webkit-appearance: none;  /*Removes default chrome and safari style*/
+      -moz-appearance: none; /* Removes Default Firefox style*/
+      background: url('img/dropdown_arrow.jpg') no-repeat #F8F8F8;  /*Adds background-image*/
+      background-position: 85px 7px;  /*Position of the background-image*/
+      text-indent: 0.01px; /* Removes default arrow from firefox*/
+      text-overflow: "";  /*Removes default arrow from firefox*/
+}
